07_retirement/grade.txt
Grading at Sun 03 Mar 2024 08:46:38 AM UTC
Attempting to compile retirement.c
retirement.c:10:9: error: expected ‘;’, identifier or ‘(’ before ‘struct’
   10 | typedef struct _retire_info retire_info;
      |         ^~~~~~
retirement.c:12:52: error: expected declaration specifiers or ‘...’ before ‘retire_info’
   12 | void compute_balance(int startAge, double initial, retire_info info) {
      |                                                    ^~~~~~~~~~~
retirement.c:19:47: error: expected declaration specifiers or ‘...’ before ‘retire_info’
   19 | void retirement(int startAge, double initial, retire_info working, retire_info retired) {
      |                                               ^~~~~~~~~~~
retirement.c:19:68: error: expected declaration specifiers or ‘...’ before ‘retire_info’
   19 | void retirement(int startAge, double initial, retire_info working, retire_info retired) {
      |                                                                    ^~~~~~~~~~~
retirement.c: In function ‘main’:
retirement.c:27:3: error: statement with no effect [-Werror=unused-value]
   27 |   retire_info working = {489, 1000, 0.045/12};
      |   ^~~~~~~~~~~
retirement.c:27:14: error: expected ‘;’ before ‘working’
   27 |   retire_info working = {489, 1000, 0.045/12};
      |              ^~~~~~~~
      |              ;
retirement.c:28:3: error: statement with no effect [-Werror=unused-value]
   28 |   retire_info retired = {384, -4000, 0.01/12};
      |   ^~~~~~~~~~~
retirement.c:28:14: error: expected ‘;’ before ‘retired’
   28 |   retire_info retired = {384, -4000, 0.01/12};
      |              ^~~~~~~~
      |              ;
retirement.c:32:3: error: implicit declaration of function ‘retirement’ [-Werror=implicit-function-declaration]
   32 |   retirement(startAge, initialSavings, working, retired);
      |   ^~~~~~~~~~
retirement.c:32:40: error: ‘working’ undeclared (first use in this function)
   32 |   retirement(startAge, initialSavings, working, retired);
      |                                        ^~~~~~~
retirement.c:32:40: note: each undeclared identifier is reported only once for each function it appears in
retirement.c:32:49: error: ‘retired’ undeclared (first use in this function)
   32 |   retirement(startAge, initialSavings, working, retired);
      |                                                 ^~~~~~~
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
